--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,9 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id flameshot
+exec --no-startup-id brave
+exec --no-startup-id kitty
+exec --no-startup-id rofi
 exec_always --no-startup-id picom
 exec_always --no-startup-id ~/Scripts/resize-brave-dialog.sh
 exec_always --no-startup-id ~/.config/polybar/launch.sh
@@ -95,6 +98,11 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+#assign application to workspaces
+assign [class="kitty"] $ws1
+assign [class="Brave-browser"] $ws2
+
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -147,6 +155,9 @@ bindsym $mod+r mode "resize"
 bindsym $mod+Shift+s exec --no-startup-id flameshot gui
 bindsym $mod+b exec --no-startup-id brave
 bindsym $mod+n exec --no-startup-id thunar
+bindsym $mod+Shift+f exec --no-startup-id rofi -show drun -theme ~/.config/rofi/launcher.rasi
+bindsym $mod+Shift+d exec --no-startup-id ~/.config/polybar/scripts/powermenu.sh 
+
 
 for_window [window_role="GtkFileChooserDialog"] floating disable
 
