--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -663,7 +663,7 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = <label-song> <icon-prev> <toggle> <icon-next>
+format-online = <icon-prev> <toggle> <icon-next>
 format-online-prefix = ﱘ
 format-online-foreground = ${color.foreground}
 
@@ -684,7 +684,7 @@ format-offline-foreground = ${color.foreground}
 ;   %date%
 ;   %title%
 ; Default: %artist% - %title%
-label-song =  " %artist% - %title%"
+label-song =  " %title%"
 label-song-maxlen = 25
 label-song-ellipsis = true
 
