--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -58,7 +58,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 26
+height = 20
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -98,7 +98,7 @@ module-margin-left = 0
 module-margin-right = 0
 
 font-0 = "JetBrainsMono Nerd Font:pixelsize=10;3"
-font-1 = "JetBrainsMono Nerd Font:pixelsize=12;4"
+font-1 = "JetBrainsMono Nerd Font:pixelsize=10;4"
 
 [bar/top]
 inherit = bar/main
@@ -106,7 +106,7 @@ border-bottom-size = 2
 border-bottom-color = ${color.primary}
 modules-left = launcher sep title
 modules-center = workspaces
-modules-right = color-switch sep battery sep checknet sep date sep sysmenu
+modules-right = sep battery sep speed sep date sep sysmenu
 enable-ipc = true
 
 [bar/bottom]
@@ -115,7 +115,7 @@ bottom = true
 border-top-size = 2
 border-top-color = ${color.primary}
 modules-left = mpd
-modules-center = cpu sep memory sep filesystem sep temperature sep speed
+modules-center = cpu sep memory sep filesystem sep temperature
 modules-right = volume sep brightness
 enable-ipc = true
 
