--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -663,7 +663,7 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = <icon-prev> <toggle> <icon-next>
+format-online = <label-song> <icon-prev> <toggle> <icon-next> <label-time>
 format-online-prefix = ﱘ
 format-online-foreground = ${color.foreground}
 
@@ -862,7 +862,7 @@ unknown-as-up = true
 ;   <label-connected> (default)
 ;   <ramp-signal>
 format-connected = <label-connected>
-format-connected-prefix = 直
+format-connected-prefix = 󰖩
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
@@ -884,7 +884,7 @@ format-disconnected-prefix = 睊
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:} %essid%  %downspeed% 祝 %upspeed%%{A}"
+label-connected = "%{A1:networkmanager_dmenu &:} %ifname%"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
