--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,6 @@ exec_always --no-startup-id ~/Scripts/resize-brave-dialog.sh
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec_always --no-startup-id python ~/.config/autotiling/autotiling/autotiling.py
 
-
 set $refresh_i3status killall -SIGUSR1 i3status
 
 #audio
@@ -102,6 +101,8 @@ assign [class="kitty"] $ws1
 assign [class="Brave-browser"] $ws2
 
 
+exec_always --no-startup-id ~/dotfiles/scripts/music_workspaces.sh
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -113,6 +114,8 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+
+bindsym $mod+F9 exec ~/scripts/music_workspace.sh
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
