--- a/kitty/ncmpterm.conf
+++ b/kitty/ncmpterm.conf
@@ -1,5 +1,6 @@
-#include ~/.config/kitty/kitty-themes/themes/gruvbox_dark.conf
+include ~/.cache/wal/colors-kitty.conf
 
+window_class ncmpterm
 
 font_family JetBrainsMono Nerd Font
 font_size 10
@@ -21,3 +22,4 @@ allow_hyperlinks yes
 strip_trailing_spaces smart
 
 shell_integration enabled
+
