--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -737,7 +737,7 @@ interface = wlp3s0
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0
+interface = enp0s25
 
 ; Seconds to sleep between updates
 ; Default: 1
