--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -34,11 +34,11 @@ inactive-opacity-override = false;
 #################################
 #           Blur                #
 #################################
-blur-method = "dual_kawase";
-blur-strength = 6;
-blur-background = true;  # Enabled globally
-blur-background-frame = false;
-blur-background-fixed = false;
+#blur-method = "dual_kawase";
+#blur-strength = 6;
+#blur-background = true;  # Enabled globally
+#blur-background-frame = false;
+#blur-background-fixed = false;
 
 # Exclude everything from blur except 'kitty'
 blur-background-exclude = [
