--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,6 +1,8 @@
 music_directory		"/mnt/storage/Music"
+playlist_directory "~/.config/mpd/playlists"
 
-db_file			"$XDG_CACHE_HOME/mpd/database"
+
+#db_file			"$XDG_CACHE_HOME/mpd/database"
 db_file			"~/.config/mpd/database"
 
 state_file			"~/.config/mpd/state"
@@ -28,3 +30,6 @@ name            "Visualizer feed"
 path            "/tmp/mpd.fifo"
 format          "44100:16:2"
 }
+
+restore_paused "yes"
+
