--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -242,12 +242,12 @@ enable-click = true
 
 enable-scroll = true
 
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4; 
-icon-4 = 5;
-icon-5 = 6;
+icon-0 = 1;󰬺
+icon-1 = 2;󰬻
+icon-2 = 3;󰬼
+icon-3 = 4;󰬽 
+icon-4 = 8;
+icon-5 = 9;
 icon-6 = 10;
 icon-default = 
 
