mounting, mpd, lazy

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,11 +1,11 @@
 music_directory		"/mnt/storage/Music"
-playlist_directory "~/.config/mpd/playlists"
+playlist_directory "/home/nenosaj/.config/mpd/playlists"
 
 
 #db_file			"$XDG_CACHE_HOME/mpd/database"
-db_file			"~/.config/mpd/database"
+db_file			"/home/nenosaj/.config/mpd/database"
 
-state_file			"~/.config/mpd/state"
+state_file			"/home/nenosaj/.config/mpd/state"
 
 bind_to_address		"localhost"
 
