--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -26,16 +26,16 @@ fade-out-step = 0.07;
 #################################
 #         Opacity               #
 #################################
-#active-opacity = 1;
-#inactive-opacity = 1;
-#frame-opacity = 1;
-#inactive-opacity-override = false;
+active-opacity = 1;
+inactive-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = false;
 
 #################################
 #         Opacity Rules         #
 #################################
-#opacity-rule = [
-#  "90:class_g = 'kitty' && focused",
-#  "80:class_g = 'kitty' && !focused"
-#];
+opacity-rule = [
+"90:class_g = 'kitty' && focused",
+"80:class_g = 'kitty' && !focused"
+];
 
